# StoriesService/static/api.yaml
@@ -131,7 +131,25 @@ paths:
           description: Story doesn't contain all the words or it is too long
         '201':
           description: Draft created / Draft updated / Draft has been published / Story has been published
-
+  /stories/delete/{id_story}:
+    post:
+      summary: Delete the story specified by story id
+      operationId: deleteStory
+      parameters:
+        - in: path
+          name: id_story
+          description: Id of story you want delete
+          required: true
+          type: integer
+        - in: query
+          name: user_id
+          description: Current user id
+          type: integer
+      responses:
+        '400':
+          description: Request is invalid, check if you are the author of the story and the id is a valid one
+        '200':
+          description: Story has been deleted
 
 definitions:
   story:
