# StoriesService/views/stories.py
@@ -104,9 +104,9 @@ def _open_story(id_story):
 def _get_draft(id_story=None):
     # Setting session to modify draft
     if 'GET' == request.method and id_story is not None:
-        user_id = int(request.args.get('user_id'))
+        user_id = request.args.get('user_id')
         story = Story.query.filter(Story.id == id_story).first()
-        if user_id is not None and story is not None and story.author_id == user_id and story.is_draft:
+        if user_id and user_id.isdigit() and story is not None and story.author_id == int(user_id) and story.is_draft:
             session['figures'] = story.figures.split('#')
             session['figures'] = session['figures'][1:-1]
             session['id_story'] = story.id
@@ -118,9 +118,6 @@ def _get_draft(id_story=None):
 @stories.operation('writeStory')
 def _write_story(id_story=None, message='', status=200):
     if 'POST' == request.method:
-        print(request.get_json(request))
-        print('ciao')
-        print(request)
         requestj = request.get_json(request)
         try:
             text = requestj['text']
@@ -131,10 +128,10 @@ def _write_story(id_story=None, message='', status=200):
                     # Update a draft
                     date_format = "%Y %m %d %H:%M"
                     date = datetime.datetime.strptime(datetime.datetime.now().strftime(date_format), date_format)
-                    db.session.query(Story).filter_by(id=session['id_story']).update({'text': text,
-                                                                                      'date': date})
+                    db.session.query(Story).filter_by(id=session['id_story']).update({'text': text,                                                                 'date': date})
                     db.session.commit()
                     session.pop('id_story')
+                    status = 200
                     message = 'Draft updated'
                 else:
                     # Save new story as draft
@@ -145,6 +142,7 @@ def _write_story(id_story=None, message='', status=200):
                     new_story.text = text
                     db.session.add(new_story)
                     db.session.commit()
+                    status = 201
                     message = 'Draft created'
                 session.pop('figures')
             else:
@@ -172,35 +170,37 @@ def _write_story(id_story=None, message='', status=200):
                             {'text': text, 'date': date, 'is_draft': False})
                         db.session.commit()
                         session.pop('id_story')
+                        status = 201
                         message = 'Draft has been published'
                     else:
                         # Publish a new story
                         new_story = Story()
-                        new_story.author_id = current_user.id
+                        new_story.author_id = user_id
                         new_story.figures = '#' + '#'.join(session['figures']) + '#'
                         new_story.is_draft = False
                         new_story.text = text
                         db.session.add(new_story)
                         db.session.commit()
-                        message = 'Draft has been published'
+                        status = 201
+                        message = 'New story has been published'
                     # TODO: chiamare inizializzaione delle reactions
                     session.pop('figures')
-            return make_response(message, 201)
+            return make_response(message, status)
         # If values in request body aren't well-formed
-        except ValueError:
-            abort(400, 'Wrong URL parameters')
+        except (ValueError, KeyError):
+            abort(400, 'Wrong parameters')
 
-# @stories.route('/stories/delete/<int:id_story>', methods=['POST'])
-# @login_required
-# def _manage_stories(id_story):
-#     story_to_delete = Story.query.filter(Story.id == id_story)
-#     if story_to_delete.first().author_id != current_user.id:
-#         flash("Cannot delete other user's story", 'error')
-#     else:
-#
-#         Reaction.query.filter(Reaction.story_id == id_story).delete()
-#         Counter.query.filter(Counter.story_id == id_story).delete()
-#         story_to_delete.delete()
-#         db.session.commit()
-#
-#     return redirect(url_for("home.index"))
+@stories.operation('deleteStory')
+def _manage_stories(id_story):
+    user_id = request.args.get('user_id')
+    story_to_delete = Story.query.filter(Story.id == id_story)
+    if not user_id or not user_id.isdigit() or story_to_delete.first().author_id != int(user_id):
+        abort(400, 'Request is invalid, check if you are the author of the story and the id is a valid one')
+    else:
+        # TODO : cancellare reactions and counters relativi
+        # Reaction.query.filter(Reaction.story_id == id_story).delete()
+        # Counter.query.filter(Counter.story_id == id_story).delete()
+        story_to_delete.delete()
+        db.session.commit()
+
+    return make_response('Story has been deleted')
